Bug 72463 - EDITING: Refresh a table does not work when a form is open simultaneously.
Summary: EDITING: Refresh a table does not work when a form is open simultaneously.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: Other All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-08 06:58 UTC by pierre-yves samyn
Modified: 2013-12-17 13:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
UpdateTable.odb (10.44 KB, application/vnd.oasis.opendocument.database)
2013-12-08 06:58 UTC, pierre-yves samyn
Details
Screenshot 5 records in the form, only 3 displayed in the table (13.52 KB, image/png)
2013-12-08 06:59 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-12-08 06:58:30 UTC
Created attachment 90443 [details]
UpdateTable.odb

Hello

Refresh a table does not work when a form is open simultaneously.

Platform: windows 7/64 Version: 4.2.0.0.beta2
Build ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d

Steps to reproduce.

1. Open the attached database UpdateTable.odb
2. View> Database objects> Table
3. Right-click Table1> Open

(5 records, id 0 to 4)

4. View> Database objects> Forms
5. Right-click Table1> Open
6. In the navigation bar of the form click on "New Record" to add one (or more) records. The ID field is Auto-value, it does not have to be provided.
7. Click in the table opened in step 3
8. Click in the toolbar on "Refresh"

Expected Result: show the new records
Actual result: these records are not displayed.

See screenshot (5 records in the form, 3 in the table).

It is necessary to close and reopen to refresh
It was ok in 4.1.3.2.

Reproduced (qa-fr) with 4.2 beta 2 on Windows XP SP3

Regards
Pierre-Yves
Comment 1 pierre-yves samyn 2013-12-08 06:59:41 UTC
Created attachment 90444 [details]
Screenshot 5 records in the form, only 3 displayed in the table
Comment 2 Robert Großkopf 2013-12-08 08:28:40 UTC
Could confirm this buggy behavior. Works right in LO 4.2.0.0beta1, not in beta2. So it has been introduced during the last days ...
My system: openSUSE 12.3 64bit rpm Linux
Comment 3 Lionel Elie Mamane 2013-12-12 15:47:46 UTC
Changed rows also don't show up as changed; it seems the refresh button does not do *anything*.
Comment 4 Lionel Elie Mamane 2013-12-12 16:59:00 UTC
It is caused by


commit 98cbcb4c9f9e74e41df84469f7a91611d3c3e407
Author: Lionel Elie Mamane <lionel@mamane.lu>
Date:   Mon Dec 2 23:44:11 2013 +0100

    fdo#72163 after updating m_xComposer, command facets are not dirty anymore
    
    Else we dispose m_xComposer too eagerly; still used by m_pCacheSet.
    
    Change-Id: I205488465c19a356534df17b8a5e9a20ce6766c9
Comment 5 Commit Notification 2013-12-12 19:24:54 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd0990db74a4a5c3a129a7ff0ed2a739cd74a381

fdo#72463 RowSet: on execute when not dirty, rebuild cache



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 pierre-yves samyn 2013-12-15 07:52:49 UTC
Hello Lionel

Thank you working to resolve this bug.

I do not know if the patch has been included in this version or not
but I still reproduce on windows 7/64 with Version: 4.2.0.0.beta2+
Build ID: d663228bd348c844f38914c9e2167ef01fadf3b3
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-14_23:15:05

Regards
Pierre-Yves
Comment 7 Lionel Elie Mamane 2013-12-15 08:11:06 UTC
(In reply to comment #6)

> I do not know if the patch has been included in this version or not
> but I still reproduce on windows 7/64 with Version: 4.2.0.0.beta2+
> Build ID: d663228bd348c844f38914c9e2167ef01fadf3b3

No, that patch is not included; the "commit notification" bot will post a comment here when it goes into the 4.2 branch, and it will also put "target:4.2.0" into the Whiteboard field.
Comment 8 pierre-yves samyn 2013-12-15 10:50:54 UTC
(In reply to comment #7)
> 
 > No, that patch is not included; the "commit notification" bot will post a
> comment here when it goes into the 4.2 branch, and it will also put
> "target:4.2.0" into the Whiteboard field.

How stupid I am...

WORKSFORME on windows 7/64 with

Version: 4.3.0.0.alpha0+
Build ID: f279acd3678d014d9d5dafe41971e0da4dec7b6c
TinderBox: Win-x86@47-TDF, Branch:master, Time: 2013-12-13_23:25:16

Thank you :)
Regards
Pierre-Yves
Comment 9 Lionel Elie Mamane 2013-12-15 15:48:40 UTC
Setting to VERIFIED/FIXED on basis of comment 8.
(Pierre-Yves, you can do that yourself in future
 when confirming that a developer's "RESOLVED/FIXED"
 is indeed fixed.)