assert non-nullness

dd0990db74a4a5c3a129a7ff0ed2a739cd74a381 "fdo#72463 RowSet: on execute when not
dirty, rebuild cache" had temporarily introduced a bug that caused m_pParseTree
to be null here during JunitTest_dbaccess_unoapi, but Lionel states that it
cannot legitimately be null, even though the computation of m_bIsCount in the
ctor takes potentially null m_pParseTree into account.

Change-Id: If95f076a4c80f80cd58bba83521633fe8bb71f5d